Implementando Favoritos, Remover(Funcional), Agregar(EnProceso)

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <title>Ionic App</title>
 
   <base href="/" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ionicons@5.5.2/dist/css/ionicons.min.css">
 
   <meta name="color-scheme" content="light dark" />
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
